# eklasse-bot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: bot.py  config.py  database.py  main.py
src/bot/: bot.py
src/models/: schema.py
