[tool.poetry]
name = "school-parent-bot"
version = "0.1.0"
description = "A Telegram bot for school communication"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
telethon = "1.32.1"
crawl4ai = "0.5.0"
httpx = "0.26.0"
sqlmodel = "0.0.14"
dramatiq = {extras = ["redis"], version = "1.15.0"}
redis = "5.0.1"
beautifulsoup4 = "4.12.2"
pydantic = "2.5.3"
python-dotenv = "1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
black = "23.12.1"
ruff = "0.1.9"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
