[tool.poetry]
name = "school-bot"
version = "0.1.0"
description = "A Telegram bot for school communication"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
telethon = "1.37.0"
httpx = "0.27.2"
sqlmodel = "0.0.22"
dramatiq = { extras = ["redis"], version = "1.17.1" }
redis = "5.2.0"
beautifulsoup4 = "4.12.3"
pydantic = "2.9.2"
python-dotenv = "1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
black = "24.10.0"
ruff = "0.7.3"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
